global CustomTopic, region for custom resources

--- a/template/staging.tmpl
+++ b/template/staging.tmpl
@@ -63,48 +63,15 @@
         "Type" : "AWS::EC2::VPC::Id",
         "Default" : "",
         "Description" : "VPC for this app"
+      },
+      "CustomTopic": {
+        "AllowedPattern": "arn:aws:.*",
+        "ConstraintDescription": "must be an ARN",
+        "Description": "Bootstrap ARN (Lambda or SNS)",
+        "Type": "String"
       }
     },
     "Resources": {
-      "CustomTopicRole": {
-        "Type": "AWS::IAM::Role",
-        "Properties": {
-          "AssumeRolePolicyDocument": {
-            "Version": "2012-10-17",
-            "Statement": [
-              {
-                "Effect": "Allow",
-                "Principal": { "Service": [ "lambda.amazonaws.com" ] },
-                "Action": [ "sts:AssumeRole" ]
-              }
-            ]
-          },
-          "Path": "/",
-          "Policies": [
-            {
-              "PolicyName": "Administrator",
-              "PolicyDocument": {
-                "Version": "2012-10-17",
-                "Statement": [ { "Effect": "Allow", "Action": "*", "Resource": "*" } ]
-              }
-            }
-          ]
-        }
-      },
-      "CustomTopic": {
-        "Type": "AWS::Lambda::Function",
-        "Properties": {
-          "Code": {
-            "S3Bucket": { "Fn::Join": [ "-", [ "convox", { "Ref": "AWS::Region" } ] ] },
-            "S3Key": { "Fn::Join": [ "", [ "release/", { "Ref": "Version" }, "/formation.zip" ] ] }
-          },
-          "Handler": "lambda.external",
-          "MemorySize": "128",
-          "Role": { "Fn::GetAtt": [ "CustomTopicRole", "Arn" ] },
-          "Runtime": "nodejs",
-          "Timeout": "30"
-        }
-      },
       {{ template "balancer-resources" . }}
       {{ template "process-resources" . }}
 
@@ -192,11 +159,11 @@
       }
     },
     "TaskDefinition": {
-      "DependsOn": "CustomTopic",
       "Type": "Custom::ECSTaskDefinition",
       "Version": "1.0",
       "Properties": {
-        "ServiceToken": { "Fn::GetAtt": [ "CustomTopic", "Arn" ] },
+        "ServiceToken": { "Ref": "CustomTopic" },
+        "Region": { "Ref": "AWS::Region" },
         "Name": { "Ref": "AWS::StackName" },
         "Release": { "Ref": "Release" },
         "Environment": { "Ref": "Environment" },
@@ -207,16 +174,16 @@
       }
     },
     "Service": {
-      "DependsOn": "CustomTopic",
       "Type": "Custom::ECSService",
       "Version": "1.0",
       "Properties": {
-        "ServiceToken": { "Fn::GetAtt": [ "CustomTopic", "Arn" ] },
+        "ServiceToken": { "Ref": "CustomTopic" },
         "Cluster": { "Ref": "Cluster" },
         "DesiredCount": { "Ref": "DesiredCount" },
         "Name": { "Ref": "AWS::StackName" },
         "TaskDefinition": { "Ref": "TaskDefinition" },
         "Role": { "Ref": "ServiceRole" },
+        "Region": { "Ref": "AWS::Region" },
         "LoadBalancers": [ {{ loadbalancers . }} ]
       }
     },
@@ -345,6 +312,14 @@
         { "Key": "system", "Value": "convox" },
         { "Key": "app", "Value": { "Ref": "AWS::StackName" } }
       ]
+    }
+  },
+  "SettingsCleanup": {
+    "Type": "Custom::S3BucketCleanup",
+    "Properties": {
+      "Bucket": { "Ref": "Settings" },
+      "Region": { "Ref": "AWS::Region" },
+      "ServiceToken": { "Ref": "CustomTopic" }
     }
   }
 {{ end }}
